Try other travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ cache: cargo
 
 env: RUST_BACKTRACE=1
 
+script:
+
 before_deploy:
 - rustup target add wasm32-unknown-unknown
 - cd jbaublitz-me-wasm
