--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ after_success:
 - cd ./jbaublitz-me-wasm/pkg
 - git init
 - git checkout -b gh-pages
-- git add .
+- git add -A .
 - git -c user.name='travis' -c user.email='travis' commit -m "Travis auto-deploy"
 - git push -f https://jbaublitz:$GITHUB_TOKEN@github.com/jbaublitz/jbaublitz-me-gh-pages gh-pages
