--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,11 @@ script:
 - wasm-pack build --target no-modules
 - cd ..
 - cp contact.css humans.css index.css index.html template.css jbaublitz-me-wasm/pkg
-after_success:
-- cd ./jbaublitz-me-wasm/pkg
-- ls
-- git init
-- git checkout -b gh-pages
-- git add -A .
-- git status
-- git -c user.name='travis' -c user.email='travis' commit -m "Travis auto-deploy"
-- git push -f https://jbaublitz:$GITHUB_TOKEN@github.com/jbaublitz/jbaublitz-me-gh-pages gh-pages
+before_deploy:
+  rm ./jbaublitz-me-wasm/pkg/.gitignore
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  on:
+    master
