--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env: RUST_BACKTRACE=1
 script:
 - rustup target add wasm32-unknown-unknown
 - cd jbaublitz-me-wasm
-- wasm-pack build --target no-modules
+- ~/.cargo/bin/wasm-pack build --target no-modules
 - cd ..
 - cp GitHub-Mark-Light-64px.png contact.css humans.css index.css index.html template.css jbaublitz-me-wasm/pkg
 before_deploy:
